--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "Petfolio",
   "version": "1.0.0",
-  "description": "",
+  "description": "All your pet's info in one place",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    
   },
-  "author": "",
+  "author": "Jamie O'Connell",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
