--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "Petfolio",
   "version": "1.0.0",
-  "description": "All your pet's info in one place",
+  "description": "All your pet's info in one",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    
+    "dev": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Jamie O'Connell",
+  "author": "",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
